--- a/admin-dashboard/backend/index.html
+++ b/admin-dashboard/backend/index.html
@@ -34,6 +34,10 @@
     <table>
         <caption><b>For admin</b></caption>
         <tr>
+          <td>GET</td>
+          <td>/api/auth/accounts</td>
+        </tr>
+        <tr>
           <td>POST</td>
           <td>/api/auth/login</td>
         </tr>
