add post student log function

--- a/admin-dashboard/backend/index.html
+++ b/admin-dashboard/backend/index.html
@@ -34,20 +34,12 @@
     <table>
         <caption><b>For admin</b></caption>
         <tr>
-          <td>GET</td>
-          <td>/api/auth/accounts</td>
-        </tr>
-        <tr>
           <td>POST</td>
           <td>/api/auth/login</td>
         </tr>
         <tr>
           <td>POST</td>
           <td>/api/auth/register</td>
-        </tr>
-        <tr>
-          <td>POST</td>
-          <td>/api/auth/logout</td>
         </tr>
     </table>
     <table>
@@ -71,6 +63,10 @@
         <tr>
           <td>DELETE</td>
           <td>/api/std/:id</td>
+        </tr>
+        <tr>
+          <td>POST(student log)</td>
+          <td>/api/std/:id/logs</td>
         </tr>
     </table>
     <table>
