add get student logs function

--- a/admin-dashboard/backend/index.html
+++ b/admin-dashboard/backend/index.html
@@ -65,6 +65,10 @@
           <td>/api/std/:id</td>
         </tr>
         <tr>
+          <td>GET(student logs)</td>
+          <td>/api/std/:id/logs</td>
+        </tr>
+        <tr>
           <td>POST(student log)</td>
           <td>/api/std/:id/logs</td>
         </tr>
