fix patch issues

--- a/admin-dashboard/backend/index.html
+++ b/admin-dashboard/backend/index.html
@@ -57,7 +57,7 @@
           <td>/api/std/</td>
         </tr>
         <tr>
-          <td>PUT</td>
+          <td>PATCH</td>
           <td>/api/std/:id</td>
         </tr>
         <tr>
@@ -88,7 +88,7 @@
           <td>/api/device/</td>
         </tr>
         <tr>
-          <td>PUT</td>
+          <td>PATCH</td>
           <td>/api/device/:id</td>
         </tr>
         <tr>
