--- a/admin-dashboard/backend/index.html
+++ b/admin-dashboard/backend/index.html
@@ -70,7 +70,7 @@
         </tr>
         <tr>
           <td>POST(student log)</td>
-          <td>/api/std/:id/logs</td>
+          <td>/api/std/:cardId/logs</td>
         </tr>
     </table>
     <table>
